#+title: What’s new in adftool

* Noteworthy changes in release ?.? (????-??-??) [?]


* Noteworthy changes in release 0.4.1 (2023-01-13) [alpha]
** Package fixes
The continuous integration is now able to build a debian package,
without a "-dirty" suffix to the version number.
** Emscripten build fix
The file open function now respects the initialization bytes.

* Noteworthy changes in release 0.4.0 (2023-01-12) [alpha]
** Libbplus has now merged with adftool
Libbplus is no longer a dependency.

* Noteworthy changes in release 0.3.0 (2023-01-12) [alpha]
** Now use libbplus
The code has been moved around so as to use libbplus. libbplus is
included in adftool.

#+language: en
#+author: Vivien Kraus
#+email: vivien.kraus@univ-reims.fr
# Local Variables:
# mode: org
# End: