@@ -147,8 +147,7 @@ adftool_quads_index_alloc (hid_t file, size_t default_order,
 		   (link_creation_properties, 1) < 0)
 		  ||
 		  ((dataset =
-		    H5Dcreate2 (file, name,
-				bplus_hdf5_table_type (ret->handle), fspace,
+		    H5Dcreate2 (file, name, H5T_STD_U32BE, fspace,
 				link_creation_properties,
 				dataset_creation_properties,
 				H5P_DEFAULT)) == H5I_INVALID_HID))
